k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: urlshortener
  labels:
    name: urlshortener
