k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener-service
  namespace: urlshortener
  labels:
    app: urlshortener-app
spec:
  selector:
    app: urlshortener-app
  ports:
    - name: http
      protocol: TCP
      port: 80 # Port exposed inside the cluster
      targetPort: http
  type: ClusterIP
  # type: LoadBalancer # Switching to LoadBalancer provisions a cloud provider load balancer.
  # type: NodePort # Switching to NodePort enables access via a specific port on each node.
  # The default is ClusterIP, and you can change it if needed.
  # Using LoadBalancer or NodePort creates an externally accessible endpoint.
